--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://127.0.01:3306/lab_4_02?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.01:3306/lab_4_04?createDatabaseIfNotExist=true
 spring.datasource.username=ironhack
 spring.datasource.password=ironhack
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 spring.jpa.hibernate.ddl-auto=validate
